# short_link

./: README.md
link_shorts/: pyproject.toml
link_shorts/app/: main.py
link_shorts/app/api/: api.py  metadata.py
link_shorts/app/api/v1/: api.py
link_shorts/app/api/v1/endpoints/: socials.py  users.py
link_shorts/app/core/: config.py
link_shorts/app/services/: email_worker.py
